<resources>
    <string name="app_name">MyPet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name_label">Name:</string>
    <string name="id_label">Chip ID:</string>
    <string name="gender_label">Gender:</string>
    <string name="birthdate_label">Date of Birth:</string>
    <string name="species_label">Species:</string>
    <string name="breed_label">Breed:</string>
    <string name="colour_label">Colour:</string>
    <string name="height_label">Height:</string>
    <string name="weight_label">Weight:</string>
    <string name="image_logo">Pet\'s recent photo.</string>
    <string name="age_label">Age:</string>
    <string name="pickone_label">Choose a Friend:</string>
    <string name="dogs_category_label">Dogs</string>
    <string name="cats_category_label">Cats</string>
    <string name="unicorns_category_label">Unicorns</string>
    <string name="other_category_label">Other</string>
    <string name="random_text">random</string>
    <string name="fairy_tale_message">Well, some say that a @Species can be found only in fairy tales. But, if you find a picture let us know.</string>
    <string name="marks_label">Disting. marks:</string>
    <string name="owner_name_label">Owner:</string>
    <string name="owner_address_label">Owner\'s address:</string>
    <string name="owner_phone_label">Owner\'s phone:</string>
    <string name="vet_phone_label">Vet\'s phone:</string>
    <string name="vet_address_label">Vet\'s address:</string>
    <string name="vet_name_label">Vet:</string>
    <string name="preference_file_key">userdata</string>
    <string name="login_menu_item">Log In</string>
    <string name="register_menu_item">Register</string>
    <string name="knock_knock">Who\'s knocking?</string>
    <string name="login_button_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="forgot_password_button">Forgot password?</string>
    <string name="please_login">Please, log in to access this feature!</string>
    <string name="bummer_message">Well, what a bummer!</string>
    <string name="pet_preview_activity_title">Choose a friend</string>
    <string name="pet_browse_activity_title">Pet quick info</string>
    <string name="main_activity_title">MyPet</string>
    <string name="register_welcome">Let us know you better!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_confpassword">Confirm password</string>
    <string name="register_confirm">Submit</string>
    <string name="register_activity_title">Welcome</string>
    <string name="login_activity_title">Log In</string>
    <string name="already_loggedin_message">You have already logged in!</string>
    <string name="err_no_internet">No internet connection available.</string>
    <string name="login_successful">Login Successful!</string>
    <string name="too_short_password">Password must exceed 6 characters.</string>
    <string name="pass_not_identical">The confirmation failed. Please try again.</string>
    <string name="field_empty">Please, fill in all fields.</string>
    <string name="user_not_found">Hmm, you look suspicious! Try registering first!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_code_conflict">The username is already being used. Try another one.</string>
    <string name="add_menu_item">Add Pet</string>
    <string name="edit_menu_item">Edit Pet</string>
    <string name="delete_menu_item">Delete Pet</string>
    <string name="comments_label">Comments here</string>
    <string name="choose_date_label">set</string>
    <string name="save_label">Save</string>
    <string name="add_label">Add</string>
    <string name="pet_details">Pet Details</string>
</resources>
