<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/bear_lock"
        android:title="@string/login_menu_item" />

    <group
        android:id="@+id/pet_detail_buttons_group">

        <item android:id="@+id/add_pet"
            android:icon="@drawable/plus"
            android:title="@string/add_menu_item"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/edit_pet"
            android:icon="@drawable/edit"
            android:title="@string/edit_menu_item"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/delete_pet"
            android:icon="@drawable/delete"
            android:title="@string/delete_menu_item"
            app:showAsAction="ifRoom"/>

    </group>

</menu>
