<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <!-- Buttons -->
        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/save_label" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/add_label" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollArea"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons">


        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin_br"
            android:paddingLeft="@dimen/activity_horizontal_margin_br"
            android:paddingRight="@dimen/activity_horizontal_margin_br"
            android:paddingTop="@dimen/activity_vertical_margin_br"
            android:columnCount="2"
            android:useDefaultMargins="false"
            tools:context="com.angie.mypet.MainActivity" >

            <!-- Pet Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/name_label" />
            <EditText
                android:id="@+id/pet_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="1"
                android:layout_column="1" />

            <!-- Pet Chip Id Number -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/id_label" />
            <EditText
                android:id="@+id/pet_chip_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:layout_column="1" />


            <!-- Pet Species -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/species_label" />
            <EditText
                android:id="@+id/pet_info_animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:layout_column="1" />

            <!-- Pet Breed -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/breed_label" />
            <EditText
                android:id="@+id/pet_info_breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="4"
                android:layout_column="1" />

            <!-- Pet Gender -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/gender_label" />
            <EditText
                android:id="@+id/pet_info_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="5"
                android:layout_column="1" />

            <!-- Pet Date of Birth -->
            <!--  <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="6"
                 android:layout_column="0"
                 android:layout_marginBottom="15dp"
                 android:layout_marginRight="15dp"
                 android:text="@string/birthdate_label" />
            <Button
                 android:id="@+id/choose_date_button"
                 android:layout_width="51dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_row="6"
                 android:layout_column="1"
                 android:text="@string/choose_date_label"
                 android:onClick="onClickFindNextPet" />
             <EditText
                 android:id="@+id/pet_info_birthday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="fill_horizontal"
                 android:layout_row="6"
                 android:layout_column="2" /> -->


            <!-- Pet Colour -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/colour_label" />
            <EditText
                android:id="@+id/pet_info_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="8"
                android:layout_column="1" />

            <!-- Pet Distinguishing Marks -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="9"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/marks_label" />
            <EditText
                android:id="@+id/pet_info_marks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="9"
                android:layout_column="1" />

            <!-- Pet Owner Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="10"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/owner_name_label" />
            <EditText
                android:id="@+id/pet_info_owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="10"
                android:layout_column="1" />

            <!-- Pet Owner Address -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="11"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/owner_address_label" />
            <EditText
                android:id="@+id/pet_info_owner_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_row="11"
                android:layout_column="1" />

            <!-- Pet Owner Phone -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="12"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/owner_phone_label" />
            <EditText
                android:id="@+id/pet_info_owner_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="12"
                android:layout_column="1" />

            <!-- Pet Vet Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="13"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/vet_name_label" />
            <EditText
                android:id="@+id/pet_info_vet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="13"
                android:layout_column="1" />

            <!-- Pet Vet Address -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="14"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/vet_address_label" />
            <EditText
                android:id="@+id/pet_info_vet_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_row="14"
                android:layout_column="1" />

            <!-- Pet Vet Phone -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="15"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/vet_phone_label" />
            <EditText
                android:id="@+id/pet_info_vet_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="15"
                android:layout_column="1" />

            <!-- Empty Space or Comments -->
            <EditText
                android:id="@+id/pet_info_comments"
                android:layout_width="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnSpan="2"
                android:layout_rowSpan="5"
                android:layout_row="16"
                android:layout_column="0"
                android:hint="@string/comments_label"
                android:layout_marginTop="10dp"  />


        </GridLayout>

    </ScrollView>

</RelativeLayout>