<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.angie.mypet.authentication.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/scrollArea"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/photo_area"
        android:layout_above="@id/buttons">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/knock_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:text="@string/knock_knock"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/knock_label"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/logo" />



            <EditText
                android:id="@+id/knock_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/hint_username"
                />

            <EditText
                android:id="@+id/knock_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/knock_username"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/hint_password"
                />

            <LinearLayout
                android:id="@+id/two_buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/knock_password">

                <Button
                    android:id="@+id/knock_submit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="left"
                    android:text="@string/login_button_button"
                    android:textSize="13sp"
                    android:elevation="10dp"
                    android:background="#D6D6D6" />

                <Button
                    android:id="@+id/knock_register"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/register_button"
                    android:textSize="12sp"
                    android:elevation="10dp"
                    android:textColor="#990000"
                    android:background="#EEEEEE" />

            </LinearLayout>

            <TextView
                android:id="@+id/knock_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_button"
                android:layout_centerInParent="true"
                android:layout_below="@+id/two_buttons"
                android:linksClickable="true"></TextView>
        </RelativeLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>

